Update about-nazir links to point to enhanced version

--- a/books.html
+++ b/books.html
@@ -786,7 +786,7 @@
                 <h3 style="color: var(--accent-gold); margin-bottom: 2rem; font-family: 'Playfair Display', serif;">Ready to Begin Your Transformation?</h3>
                 <div style="display: flex; gap: 2rem; justify-content: center; flex-wrap: wrap;">
                     <a href="testimonials.html" class="btn btn-secondary">Read Testimonials</a>
-                    <a href="about-nazir.html" class="btn btn-secondary">Meet The Author</a>
+                    <a href="about-nazir-enhanced.html" class="btn btn-secondary">Meet The Author</a>
                     <a href="members-new.html" class="btn btn-secondary">Explore Temple</a>
                 </div>
             </div>
