--- a/features.html
+++ b/features.html
@@ -577,7 +577,7 @@
             </div>
             <div class="footer-section">
                 <h4>Company</h4>
-                <a href="about-nazir.html">About Nazir</a>
+                <a href="about-nazir-enhanced.html">About Nazir</a>
                 <a href="privacy.html">Privacy</a>
                 <a href="contact.html">Contact</a>
             </div>
