Clean up website - remove old backups and test files, fix section paths

--- a/sections/index.html
+++ b/sections/index.html
@@ -241,84 +241,84 @@
                     <span class="emoji">🧘‍♀️</span>
                     <h3>Meditation & Mindfulness</h3>
                     <p>Guided meditations, breathing exercises, and mindfulness practices tailored to your journey level.</p>
-                    <a href="sections/meditation-mindfulness.html">Explore</a>
+                    <a href="meditation-mindfulness.html">Explore</a>
                 </div>
 
                 <div class="feature-card">
                     <span class="emoji">📖</span>
                     <h3>Sacred Knowledge</h3>
                     <p>Deep spiritual texts, teachings, and sacred wisdom from ancient traditions.</p>
-                    <a href="sections/sacred-knowledge.html">Explore</a>
+                    <a href="sacred-knowledge.html">Explore</a>
                 </div>
 
                 <div class="feature-card">
                     <span class="emoji">🎵</span>
                     <h3>Spiritual Music & Sound</h3>
                     <p>Curated playlists, binaural beats, and sacred sound healing frequencies.</p>
-                    <a href="sections/spiritual-music.html">Explore</a>
+                    <a href="spiritual-music.html">Explore</a>
                 </div>
 
                 <div class="feature-card">
                     <span class="emoji">✨</span>
                     <h3>Crystal & Energy Healing</h3>
                     <p>Learn about crystals, chakras, auras, and energy healing techniques.</p>
-                    <a href="sections/crystals-elements.html">Explore</a>
+                    <a href="crystals-elements.html">Explore</a>
                 </div>
 
                 <div class="feature-card">
                     <span class="emoji">🎴</span>
                     <h3>Oracle & Divination</h3>
                     <p>Interactive oracle readings, tarot guidance, and divination tools for insights.</p>
-                    <a href="sections/oracle-divination.html">Explore</a>
+                    <a href="oracle-divination.html">Explore</a>
                 </div>
 
                 <div class="feature-card">
                     <span class="emoji">🎨</span>
                     <h3>Sacred Arts & Practices</h3>
                     <p>Mandala coloring, sacred geometry, and creative spiritual expression.</p>
-                    <a href="sections/sacred-arts-sound.html">Explore</a>
+                    <a href="sacred-arts-sound.html">Explore</a>
                 </div>
 
                 <div class="feature-card">
                     <span class="emoji">📚</span>
                     <h3>Sacred Books Library</h3>
                     <p>Access to sacred texts, spiritual books, and guided study materials.</p>
-                    <a href="sections/sacred-books.html">Explore</a>
+                    <a href="sacred-books.html">Explore</a>
                 </div>
 
                 <div class="feature-card">
                     <span class="emoji">🎯</span>
                     <h3>Personal Growth Quests</h3>
                     <p>Structured journeys and quests to develop skills and spiritual mastery.</p>
-                    <a href="sections/personal-growth.html">Explore</a>
+                    <a href="personal-growth.html">Explore</a>
                 </div>
 
                 <div class="feature-card">
                     <span class="emoji">👥</span>
                     <h3>Community & Connection</h3>
                     <p>Connect with fellow seekers, share experiences, and grow together.</p>
-                    <a href="sections/community.html">Explore</a>
+                    <a href="community.html">Explore</a>
                 </div>
 
                 <div class="feature-card">
                     <span class="emoji">📅</span>
                     <h3>Lunar & Seasonal Calendar</h3>
                     <p>Align your practices with moon cycles and seasonal energies.</p>
-                    <a href="sections/calendar.html">Explore</a>
+                    <a href="calendar.html">Explore</a>
                 </div>
 
                 <div class="feature-card">
                     <span class="emoji">🎮</span>
                     <h3>Gamified Learning</h3>
                     <p>Daily trivia, challenges, and games that make learning fun and engaging.</p>
-                    <a href="sections/daily-trivia-PREMIUM.html">Explore</a>
+                    <a href="daily-trivia-PREMIUM.html">Explore</a>
                 </div>
 
                 <div class="feature-card">
                     <span class="emoji">🏆</span>
                     <h3>Achievements & Rewards</h3>
                     <p>Earn badges, unlock rewards, and track your spiritual progress.</p>
-                    <a href="sections/reward-shop.html">Explore</a>
+                    <a href="reward-shop.html">Explore</a>
                 </div>
             </div>
         </div>
