--- a/pricing.html
+++ b/pricing.html
@@ -554,10 +554,11 @@
             <a href="index.html" class="logo"><img src="images/branding/edenlogotransparent.png" alt="Eden Consciousness Logo" style="height: 40px; margin-right: 10px; vertical-align: middle;"><span style="vertical-align: middle;">Eden Consciousness</span></a>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="about-eden.html">About Eden</a>
-                <a href="features.html">Features</a>
-                <a href="journey.html">Journey</a>
                 <a href="pricing.html">Pricing</a>
+                <a href="members-new.html">Member Portal</a>
+                <a href="dashboard.html">Dashboard</a>
+                <a href="admin-dashboard.html">Admin</a>
+                <a href="system-testing-guide.html">Testing</a>
             </nav>
             <div class="header-actions">
                 <a href="members-new.html" class="btn btn-secondary">Login</a>
