--- a/index.html
+++ b/index.html
@@ -529,10 +529,11 @@
             </a>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="about-eden.html">About Eden</a>
-                <a href="features.html">Features</a>
-                <a href="journey.html">Journey</a>
-                <a href="#pricing">Pricing</a>
+                <a href="pricing.html">Pricing</a>
+                <a href="members-new.html">Member Portal</a>
+                <a href="dashboard.html">Dashboard</a>
+                <a href="admin-dashboard.html">Admin</a>
+                <a href="system-testing-guide.html">Testing</a>
             </nav>
             <div class="header-actions">
                 <a href="members-new.html" class="btn btn-secondary">Login</a>
