Fix: Change Go Premium/Upgrade Now buttons to link to journey.html

--- a/home.html
+++ b/home.html
@@ -537,7 +537,7 @@
             </nav>
             <div class="header-actions">
                 <a href="members-new.html" class="btn btn-secondary">Login</a>
-                <a href="https://buy.stripe.com/aFaeVe2fl8F31Rk2i5fjG00" class="btn btn-primary">Go Premium</a>
+                <a href="journey.html" class="btn btn-primary">Go Premium</a>
             </div>
         </div>
     </header>
@@ -674,7 +674,7 @@
                             <li>Meditations</li>
                             <li>Full community</li>
                         </ul>
-                        <a href="https://buy.stripe.com/aFaeVe2fl8F31Rk2i5fjG00" class="btn btn-primary" style="width: 100%; text-align: center;">Upgrade Now</a>
+                        <a href="journey.html" class="btn btn-primary" style="width: 100%; text-align: center;">Upgrade Now</a>
                     </div>
                 </div>
             </div>
@@ -1035,5 +1035,7 @@
     <script src="/js/analytics.js"></script>
 </body>
 </html>
+
+
 
 
