--- a/members-new.html
+++ b/members-new.html
@@ -745,7 +745,7 @@
                 <a href="system-testing-guide.html">Testing</a>
             </nav>
             <div class="header-actions">
-                <a href="https://buy.stripe.com/aFaeVe2fl8F31Rk2i5fjG00" class="btn btn-primary">Go Premium</a>
+                <a href="journey.html" class="btn btn-primary">Go Premium</a>
             </div>
         </div>
     </header>
@@ -2982,6 +2982,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
