--- a/phase1-awakening.html
+++ b/phase1-awakening.html
@@ -15,6 +15,7 @@
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-storage-compat.js"></script>
 
     <!-- Divine Temple Systems -->
     <script src="js/firebase-config.js"></script>
@@ -721,11 +722,11 @@
                 <div class="breadcrumb-item">
                     <a href="index.html">?? Home</a>
                 </div>
-                <span class="breadcrumb-separator">›</span>
+                <span class="breadcrumb-separator">ï¿½</span>
                 <div class="breadcrumb-item">
                     <a href="journey.html">Journey</a>
                 </div>
-                <span class="breadcrumb-separator">›</span>
+                <span class="breadcrumb-separator">ï¿½</span>
                 <div class="breadcrumb-item">
                     <span class="breadcrumb-current">Phase 1: Awakening</span>
                 </div>
@@ -890,7 +891,7 @@
                 // Only trigger if still stuck on loading
                 if (loading && window.getComputedStyle(loading).display !== 'none') {
                     fallbackTriggered = true;
-                    console.warn('?? Phase 1 fallback triggered — external scripts did not resolve in time');
+                    console.warn('?? Phase 1 fallback triggered ï¿½ external scripts did not resolve in time');
                     console.warn('?? Check console for errors in: phase1-awakening.js, firebase-config.js, journey-gate.js');
 
                     loading.style.display = 'none';
