--- a/dashboard.html
+++ b/dashboard.html
@@ -404,7 +404,7 @@
             <h3>Navigation</h3>
             <ul class="sidebar-menu">
                 <li><a href="dashboard.html" class="active">🏠 Dashboard</a></li>
-                <li><a href="journey.html">🌅 My Journey</a></li>
+                <li><a href="phase1-awakening.html">🌅 My Journey</a></li>
                 <li><a href="meditation.html">🧘 Meditation</a></li>
                 <li><a href="chat.html">💬 Community Chat</a></li>
                 <li><a href="journal.html">📖 Sacred Journal</a></li>
@@ -422,7 +422,7 @@
                 <h1 id="dashboard">Welcome to the Divine Temple</h1>
                 <p>You are now part of the awakening community. Your journey from consciousness to mastery begins here.</p>
                 <div class="welcome-buttons">
-                    <a href="journey.html" class="btn btn-primary">Continue Your Journey</a>
+                    <a href="phase1-awakening.html" class="btn btn-primary">Continue Your Journey</a>
                     <a href="meditation.html" class="btn btn-secondary">Start Meditation</a>
                     <a href="chat.html" class="btn btn-secondary">Join Community</a>
                 </div>
@@ -589,7 +589,7 @@
                 <h4>Learn</h4>
                 <a href="about-eden.html">About Eden</a>
                 <a href="features.html">Features</a>
-                <a href="journey.html">Journey</a>
+                <a href="phase1-awakening.html">Journey</a>
             </div>
             <div class="footer-section">
                 <h4>Company</h4>
